testsuite/tests/overloadedrecflds/should_fail/T17420A.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T17420A where

data Dog = Dog { name::String }
data Human = Human { name::Int }
